@@ -70,7 +70,11 @@
 #define configUSE_IDLE_HOOK		0
 #define configMAX_PRIORITIES		( ( unsigned portBASE_TYPE ) 5 )
 #define configUSE_TICK_HOOK		0
-#define configCPU_CLOCK_HZ		( ( unsigned long ) 99000000 )
+#ifdef REVISION_A
+#define configCPU_CLOCK_HZ		48000000
+#else
+#define configCPU_CLOCK_HZ		72000000
+#endif
 #define configTICK_RATE_HZ		( ( portTickType ) 1000 )
 #define configMINIMAL_STACK_SIZE	( ( unsigned short ) 80 )
 #define configTOTAL_HEAP_SIZE		( ( size_t ) ( 19 * 1024 ) )
@@ -155,11 +159,5 @@ numeric value the higher the interrupt priority). */
 extern void vConfigureTimerForRunTimeStats( void );
 #define portCONFIGURE_TIMER_FOR_RUN_TIME_STATS() vConfigureTimerForRunTimeStats()
 #define portGET_RUN_TIME_COUNTER_VALUE() LPC_TIM0->TC
-
-// Map FreeRTOS interrupt handlers to mine
-
-#define xPortSysTickHandler	SysTick_Handler
-#define xPortPendSVHandler	PendSV_Handler
-#define vPortSVCHandler		SVC_Handler
 
 #endif /* FREERTOS_CONFIG_H */
